# rust-client-server-basico

src/: 00_client.rs  00_server.rs  Cargo.toml  usuario.rs
